--- a/web/biome.jsonc
+++ b/web/biome.jsonc
@@ -8,7 +8,8 @@
       "trailingCommas": "all",
       "indentWidth": 2,
       "indentStyle": "space",
-      "lineWidth": 100
+      "lineWidth": 100,
+      "arrowParentheses": "asNeeded"
     }
   }
 }
