feat: transcribe audio and generate embeddings

--- a/server/biome.jsonc
+++ b/server/biome.jsonc
@@ -10,5 +10,12 @@
       "indentStyle": "space",
       "lineWidth": 100
     }
+  },
+  "linter": {
+    "rules": {
+      "nursery": {
+        "noFloatingPromises": "warn"
+      }
+    }
   }
 }
